trunk/Archive2/93/a68f895ed0e74c/output
main.cpp: In constructor 'foo::foo()':
main.cpp:8:20: error: cannot call constructor 'foo::foo' directly
         this->foo::foo(42);
                    ^
